--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../images/connect4) ;
+    background-image: url(../images/connect4.jpg) ;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
